css/style.css
/* ... */
.row-news img {
    opacity: 1;
    display: block;
    width: 100%;
    height: auto;
    transition: .5s ease;
    backface-visibility: hidden;
}

.news-search-icon {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%)
}

.row-news .img-sec-news:hover img{
    opacity: 0.1;
}

.row-news .img-sec-news:hover .news-search-icon  {
    opacity: 1;
}
.row-news .img-sec-news .text { 
  color: rgb(255, 255, 255) !important;
  font-size: 25px;
  padding: 16px 32px;
}

.row-news .news-header {
    background-color: #f4f4f4;
    text-align: right;
    padding: 20px;
}

.row-news .news-header h4 {
    color: #5a5a5a;
    margin-bottom: 9px;
}

.row-news .news-header p {
    margin-bottom: 3px;
    color: #808080;
}

.Our-Prices {
    font-size: 38px;
    line-height: 34px;
    margin-top: 90px;
}

.our-prices-panel {
    margin-top: 70px;
    margin-bottom: 70px;
}

.services-icons {
    margin-top: 97px;
    margin-bottom: 50px;
}

.services-icons .col-md-3 i {
    border: 1px solid;
    padding: 20%;
    border-radius: 256px;
    font-size: 43px;
}


/* .services-icons .col-md-3 {
    
} */

.services-icons .col-md-3 p {
    line-height: 91px;
    color: #ed145b;
    font-weight: bold;
}

.footer-p {
    line-height: 91px;
    background-color: #2b2b2b;
    font-size: 11px;
    color: white;
}

.footer-dot {
    color: #ed145b;
}

.our-pricing .panel {
    border-radius: 0px;
}

.our-pricing .panel:hover .panel-heading {
    background-color: #ed145b;
}

.our-pricing .panel:hover .panel-heading .btn-pricing,
.our-pricing .panel:hover .btn-buynow {
    -webkit-box-shadow: 0px 0px 23px -1px rgba(0, 0, 0, 1);
    -moz-box-shadow: 0px 0px 23px -1px rgba(0, 0, 0, 1);
    box-shadow: 0px 0px 23px -1px rgba(0, 0, 0, 1);
}

.our-pricing .panel .panel-heading {
    color: white;
    background-color: #5a5a5a;
    padding-top: 22px;
}

.our-pricing .panel .panel-heading .btn-pricing {
    color: #5a5a5a;
    background-color: #f4f4f4;
    width: 76%;
    position: relative;
    top: 26px;
    height: 42px;
    border-radius: 20px;
}

.our-pricing .price-amount {
    font-size: 50;
}

.our-pricing .panel-body {
    color: #5a5a5a;
}

.our-pricing .panel-body p:first-child {
    margin-top: 32px;
}

.our-pricing .panel-body p {
    margin-bottom: 10px;
}

.our-pricing .panel-body .btn-buynow {
    margin-top: 15px;
    width: 78%;
    border-radius: 20px;
    height: 42px;
    background-color: #eb145a;
    color: white;
    font-weight: bold;
    margin-bottom: 10px;
}

.Aditional-Info h3 {
    color: #eb145a;
    font-size: 16px;
    line-height: 42px;
    font-weight: bold;
}

.Aditional-icon i {
    padding: 20%;
    font-size: 43px;
    color: #eb145a;
}

.Aditional-1 {
    margin-top: 90px;
}

.Aditional-2 {
    margin-top: 40px;
    margin-bottom: 90px;
}

.bg-text-carousel {
    background-color: #f4f4f4;
}

.bg-Join {
    background-color: #eb145a;
    line-height: 100px;
}

.bg-Join .col-md-7 center p:first-child {
    color: #ffffff;
    font-weight: bold;
    font-size: 21px;
    margin-right: 204px;
}

.btn-Join {
    border-radius: 20px;
    padding: 8px 50px;
    background-color: white;
    color: #eb145a;
    font-weight: bold;
    margin-top: 32px;
    margin-left: 283px;
}

.btn-Aditional {
    background-color: transparent;
    margin-top: 72px;
    color: #ed145b;
    font-weight: bold;
}

.glyphicon-chevron-down {
    background-color: transparent;
    position: relative;
    right: 50%;
    color: #ed145b;
    top: 57px;
    right: -71px;
    margin-bottom: 80px;
}

bg-Safari-Browser {
    background-color: #f4f4f4;
}

.Safari-Browser-img {
    margin-top: 59px;
    width: 530px;
    height: 411px;
    margin-bottom: 44px;
}

.btn-download {
    background-color: #ed145b;
    padding: 19px 52px;
    border-radius: 32px;
    margin-top: 47px;
    font-size: 14px;
    color: white;
    padding-left: 27px;
    padding-right: 27px;
    padding-top: 10px;
    padding-bottom: 10px;
    position: absolute;
    left: 15px;
    margin-top: 20px;
}

.fa-quote-left,
.fa-quote-right {
    color: #ed145b;
    font-size: 38px;
    margin-bottom: 10px;
    margin-bottom: 45px;
    margin-top: 45px;
}

.carousel-caption {
    right: 20%;
    left: 20%;
    padding-bottom: 110px;
}


/* animation */

.animation {
    animation: animationFrames ease 0.8s;
    animation-iteration-count: infinite;
    transform-origin: 50% 50%;
    -webkit-animation: animationFrames ease 0.8s;
    -webkit-animation-iteration-count: infinite;
    -webkit-transform-origin: 50% 50%;
    -moz-animation: animationFrames ease 0.8s;
    -moz-animation-iteration-count: infinite;
    -moz-transform-origin: 50% 50%;
    -o-animation: animationFrames ease 0.8s;
    -o-animation-iteration-count: infinite;
    -o-transform-origin: 50% 50%;
    -ms-animation: animationFrames ease 0.8s;
    -ms-animation-iteration-count: infinite;
    -ms-transform-origin: 50% 50%;
}

@keyframes animationFrames {
    0% {
        transform: translate(0px, 0px);
    }
    15% {
        transform: translate(0px, -25px);
    }
    30% {
        transform: translate(0px, 0px);
    }
    45% {
        transform: translate(0px, -15px);
    }
    60% {
        transform: translate(0px, 0px);
    }
    75% {
        transform: translate(0px, -5px);
    }
    100% {
        transform: translate(0px, 0px);
    }
}

@-moz-keyframes animationFrames {
    0% {
        -moz-transform: translate(0px, 0px);
    }
    15% {
        -moz-transform: translate(0px, -25px);
    }
    30% {
        -moz-transform: translate(0px, 0px);
    }
    45% {
        -moz-transform: translate(0px, -15px);
    }
    60% {
        -moz-transform: translate(0px, 0px);
    }
    75% {
        -moz-transform: translate(0px, -5px);
    }
    100% {
        -moz-transform: translate(0px, 0px);
    }
}
/* ... */

